@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+common/treasure.c: Added explicit item_power calculation for generated items that
+    got an item_power of 0 - should solve bug #1460354.
+Yann Chachkoff 2006-07-21
+
 scommon/map.c: Add check to block_linked() to make sure things never block themself.
 server/spell_attack.c: Target the head of monsters diseases are cast at.
 Alex Schultz 2006-07-18
